feat: change jdbc to hibernate, change validation, add some internationalization and do refactor